Update gradle config for java app (not basic) WIP. Doing all this just for dep management

--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,31 @@
  * This is a general purpose Gradle build.
  * Learn more about Gradle by exploring our Samples at https://docs.gradle.org/8.12/samples
  */
+plugins {
+    id 'java'
+    id 'application' // For running your application
+}
+
+group 'com.example'
+version '1.0-SNAPSHOT'
+
+repositories {
+    mavenCentral() // Fetch dependencies from Maven Central
+}
+
+dependencies {
+    // Add libraries here, e.g., Jackson for JSON parsing
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
+
+    // Test libraries
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+}
+
+application {
+    // Specify the main class (replace with your main class path)
+    mainClass = 'com.example.Main'
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
+}
