Use the resource dir to store champ list and correct read logic for file

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ sourceSets {
         java {
             srcDirs = ['app/src/main/java']
         }
+        resources {
+            srcDirs = ['app/src/main/resources']
+        }
     }
 }
 
